// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary properly with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <p
      className="page-header__title"
    >
      Viewing 
      <span
        className="total-num"
      >
        1
      </span>
       
      expense
       totalling 
      <span
        className="total-num"
      >
        $1.96
      </span>
    </p>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesSummary properly with multiple expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <p
      className="page-header__title"
    >
      Viewing 
      <span
        className="total-num"
      >
        3
      </span>
       
      expenses
       totalling 
      <span
        className="total-num"
      >
        $1,141.96
      </span>
    </p>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
